// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button PrimaryButton It should render. 1`] = `
<div>
  <button
    class="Button ButtonMedium ButtonPrimary"
  >
    Button
  </button>
</div>
`;

exports[`Button SecondaryButton It should render. 1`] = `
<div>
  <button
    class="Button ButtonMedium ButtonSecondary"
  >
    Button
  </button>
</div>
`;
